Added two new elements to Message model, status and is_read
